2008-09-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flacparse/gstbaseparse.c: (gst_base_parse_finalize),
	(gst_base_parse_class_init), (gst_base_parse_push_buffer),
	(gst_base_parse_change_state), (gst_base_parse_set_index),
	(gst_base_parse_get_index):
	Add support for GstIndex.

2008-09-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flacparse/gstbaseparse.c: (gst_base_parse_class_init),
	(gst_base_parse_push_buffer),
	(gst_base_parse_update_upstream_durations),
	(gst_base_parse_convert), (gst_base_parse_frame_in_segment):
	* gst/flacparse/gstbaseparse.h:
	Provide a vfunc for the subclass to decide whether a frame is inside
	the segment or not and add a default implementation.

	Fix approximate bitrate calculations.

2008-09-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flacparse/gstbaseparse.c: (gst_base_parse_class_init),
	(gst_base_parse_init), (gst_base_parse_push_buffer),
	(gst_base_parse_update_upstream_durations), (gst_base_parse_chain),
	(gst_base_parse_loop), (gst_base_parse_activate),
	(gst_base_parse_convert), (gst_base_parse_query):
	Approximate the average bitrate, duration and size if possible
	and add a default conversion function which uses this for
	time<->byte conversions.

	* gst/flacparse/gstflacparse.c: (gst_flac_parse_get_frame_size):
	Fix parsing if upstream gives -1 as duration.

2008-09-30  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/rtpsession.c: (on_new_ssrc), (on_ssrc_collision),
	(on_ssrc_validated), (on_ssrc_active), (on_ssrc_sdes),
	(on_bye_ssrc), (on_bye_timeout), (on_timeout), (on_sender_timeout):
	Ref the rtpsource object before we release the session lock when we emit
	the signals.

2008-09-30  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* sys/Makefile.am:
	* sys/wasapi/Makefile.am:
	* sys/wasapi/gstwasapi.c:
	* sys/wasapi/gstwasapisink.c:
	* sys/wasapi/gstwasapisink.h:
	* sys/wasapi/gstwasapisrc.c:
	* sys/wasapi/gstwasapisrc.h: