@@ -116,13 +116,10 @@ typedef enum {
 #define GST_TAG_IMAGE_XRESOLUTION          "image-xresolution"
 #define GST_TAG_IMAGE_YRESOLUTION          "image-yresolution"
 
-#define GST_TAG_GPS_ALTITUDE               "gps-altitude"
 #define GST_TAG_GPS_AREA_INFORMATION       ""
 #define GST_TAG_GPS_DIFFERENTIAL           ""
 #define GST_TAG_GPS_DOP                    ""
 #define GST_TAG_GPS_IMAGE_DIRECTION        ""
-#define GST_TAG_GPS_LATITUDE               "gps-latitude"
-#define GST_TAG_GPS_LONGITUDE              "gps-longitude"
 #define GST_TAG_GPS_MEASURE_MODE           ""
 #define GST_TAG_GPS_PROCESSING_METHOD      ""
 #define GST_TAG_GPS_SATELLITES             ""
