@@ -1,3 +1,11 @@
+2008-10-02  Stefan Kost  <ensonic@users.sf.net>
+
+	* ext/metadata/README:
+	* ext/metadata/metadataexif.c:
+	* ext/metadata/metadatatags.c:
+	* ext/metadata/metadatatags.h:
+	  Use core gsp tags.
+
 2008-09-30  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
 	* gst/flacparse/gstbaseparse.c: (gst_base_parse_finalize),
